@@ -1,3 +1,7 @@
+2010-05-21 Homer Xing <homer.xing@gmail.com>
+
+    * Clean up Nautilus thumbnails image cache.
+
 2010-05-20 Homer Xing <homer.xing@gmail.com>
 
     * Detect missing packages in ArchLinux
